force-app/main/default/objects/Opportunity/fields/AccountBudget__c.field-meta.xml
<CustomField>
    <fullName>AccountBudget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Budget</description>
    <inlineHelpText>Account Budget</inlineHelpText>
    <label>Account Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AccountBudget__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AccountBudget__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>