force-app/main/default/objects/Opportunity/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BillTo Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invalid BillTo Contact. Select one that has the same billing account as the opportunity.</errorMessage>
        <filterItems>
            <field>Contact.BillToAccount__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>