force-app/main/default/objects/Opportunity/fields/CycleNumber__c.field-meta.xml
<CustomField>
    <fullName>CycleNumber__c</fullName>
    <label>Cycle #</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>