force-app/main/default/objects/Opportunity/fields/PONumber__c.field-meta.xml
<CustomField>
    <fullName>PONumber__c</fullName>
    <label>PO #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>