force-app/main/default/objects/Opportunity/fields/PreBill__c.field-meta.xml
<CustomField>
    <fullName>PreBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Bill</label>
    <type>Checkbox</type>
</CustomField>