force-app/main/default/objects/Opportunity/fields/ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDate__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>