force-app/main/default/objects/Opportunity/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type</label>
    <referenceTo>ProjectType__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>