force-app/main/default/objects/Opportunity/fields/QuotedTime__c.field-meta.xml
<CustomField>
    <fullName>QuotedTime__c</fullName>
    <label>Quoted Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>