force-app/main/default/objects/Opportunity/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <description>Date client would prefer for the requested service.</description>
    <inlineHelpText>Date client would prefer for the requested service.</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>