force-app/main/default/objects/Opportunity/fields/ResponsibleParty__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResponsibleParty</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (ResponsibleParty)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>