force-app/main/default/objects/Opportunity/validationRules/Limit_opportunity_to_45_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_opportunity_to_45_characters</fullName>
    <active>true</active>
    <errorConditionFormula>Len( Name ) &gt; 45</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please limit the Opportunity name to 45 characters</errorMessage>
</ValidationRule>